--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "chartjs": "^0.3.24",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
